--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "hammerjs": "^2.0.8",
     "ng-cli": "^0.7.0",
     "rxjs": "~6.5.1",
+    "serialize-javascript": "^2.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.801.3",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
