--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "angular-hammer": "^2.2.0",
     "cordova-android": "8.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
