--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@ionic/storage": "^2.2.0",
     "angular-hammer": "^2.2.0",
     "cordova-android": "8.1.0",
+    "cordova-browser": "^6.0.0",
+    "cordova-ios": "4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng-cli": "^0.7.0",
@@ -85,7 +87,9 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios",
+      "browser"
     ]
   }
 }
