--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               }
             ],
             "styles": [
+              "src/theme/android-custom-theme.css",
               {
                 "input": "src/theme/variables.scss"
               },
