--- a/angular.json
+++ b/angular.json
@@ -32,9 +32,7 @@
               }
             ],
             "styles": [
-              {
-                "input": "src/theme/variables.scss"
-              },
+              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               {
                 "input": "src/global.scss"
               }
@@ -99,7 +97,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "styles": [
-              "./src/theme/variables.scss"
+              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
             ],
             "scripts": [],
             "assets": [
