--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
               }
             ],
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/theme/android-custom-theme.css",
+              {
+                "input": "src/theme/variables.scss"
+              },
               {
                 "input": "src/global.scss"
               }
@@ -97,7 +100,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+              "./src/theme/variables.scss"
             ],
             "scripts": [],
             "assets": [
